<resources>
    <string name="app_name">ToDoApp</string>
    <string name="action_search">Search</string>
    <string name="action_notifications">Notifications</string>
    <string name="placeholder_in_development">In development</string>
    <string name="explore_fragment_all_tasks">All tasks</string>
    <string name="explore_fragment_overdue_tasks">Overdue</string>
    <string name="explore_fragment_task_deleted">Task deleted</string>
    <string name="explore_fragment_task_undo">Undo</string>
    <string name="explore_fragment_filter_date">Date</string>
    <string name="explore_fragment_toolbar_title">Tasks</string>
    <string name="add_fragment_enter_title">Enter the title</string>
    <string name="add_fragment_enter_description">Enter the description</string>
    <string name="add_fragment_new_task">New task</string>
    <string name="add_fragment_today">Today</string>
    <string name="add_fragment_error_title_empty">The title cannot be empty</string>
    <string name="add_fragment_error_title_not_unique">The title must be unique</string>
    <string name="add_fragment_creating_task">Creating a task</string>
    <string name="add_fragment_error_description">The description cannot be empty</string>
    <string name="add_fragment_error_db">Failed to add entry</string>
    <string name="add_fragment_date_specify">Specify the date</string>
    <string name="add_fragment_date_picker_title">Select date</string>
    <string name="add_fragment_time_picker_title">Select time</string>
    <string name="add_fragment_error_invalid_date">Invalid date</string>
    <string name="search_fragment_nothing_found">Nothing found</string>
    <string name="search_fragment_error_search">Search error</string>
    <string name="search_fragment_enter_something">Enter something</string>
    <string name="details_fragment_error_task_loading">Task loading error</string>
    <string name="details_fragment_task">Task</string>
    <string name="details_fragment_dialog_title">Unable to save the task</string>
    <string name="details_fragment_dialog_message">Exit without saving?</string>
    <string name="details_fragment_dialog_button_negative">To stay</string>
    <string name="details_fragment_dialog_button_positive">Exit without saving</string>
    <string name="details_fragment_error_db">Failed to re-record</string>
    <string name="details_fragment_menu_delete">Delete a task</string>
    <string name="details_fragment_dialog_delete_title">Deleting a task</string>
    <string name="details_fragment_dialog_delete_message">After deleting, it will be impossible to restore the task. Delete a task?</string>
    <string name="details_fragment_dialog_delete_negative_button">Do not delete</string>
    <string name="details_fragment_dialog_delete_positive_button">Delete a task</string>
    <string name="details_fragment_error_delete">Failed to delete the task</string>
    <string name="details_fragment_button_done">Mark Completed</string>
    <string name="details_fragment_button_not_done">Mark as incomplete</string>
    <string name="details_fragment_category_personal">Personal</string>
    <string name="details_fragment_category_business">Business</string>
    <string name="details_fragment_category_education">Education</string>
    <string name="details_fragment_category_science">Science</string>
    <string name="shared_element">sharedElement_</string>
    <string name="notification_title">ToDoApp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="explore_fragment_label">Explore Fragment</string>
    <string name="search_fragment_label">Search Fragment</string>
    <string name="notifications_fragment_label">Notifications Fragment</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>