<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/explore_fragment">

    <fragment
        android:id="@+id/explore_fragment"
        android:name="com.github.llmaximll.todoapp.presentation.explore.view.ExploreFragment"
        android:label="@string/explore_fragment_label"
        tools:layout="@layout/fragment_explore">

        <action
            android:id="@+id/action_ExploreFragment_to_SearchFragment"
            app:destination="@id/search_fragment" />
        <action
            android:id="@+id/action_ExploreFragment_to_NotificationsFragment"
            app:destination="@id/notifications_fragment" />
        <action
            android:id="@+id/action_ExploreFragment_to_AddFragment"
            app:destination="@id/addFragment" />
    </fragment>
    <fragment
        android:id="@+id/search_fragment"
        android:name="com.github.llmaximll.todoapp.presentation.search.SearchFragment"
        android:label="@string/search_fragment_label"
        tools:layout="@layout/fragment_search"/>
    <fragment
        android:id="@+id/notifications_fragment"
        android:name="com.github.llmaximll.todoapp.presentation.notifications.NotificationsFragment"
        android:label="@string/notifications_fragment_label"
        tools:layout="@layout/fragment_notifications"/>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.github.llmaximll.todoapp.presentation.add.view.AddFragment"
        android:label="fragment_add"
        tools:layout="@layout/fragment_add" />
</navigation>